fixed svg margin

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -23,6 +23,12 @@ header.header {
             vertical-align: middle;
             align-items: center;
 
+            div.header-logo {
+                display: flex;
+                justify-content: flex-start;
+                height: 35px;
+            }
+
             a.header--surf-title-link {
                 display: flex;
                 vertical-align: middle;
